# vz-docker-assistant

./: stack.yaml  vz-docker-assistant.cabal
src/: ConfigData.hs  Main.hs  PrintCommands.hs  ReadConfig.hs  UsageCLI.hs
tests/configs/: remoteRun.json
