name:                vz-docker-assistant
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/vz-docker-assistant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable vz-docker-assistant
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , split
                     , parsec-numbers
                     , parsec
                     , interpolate
                     , docopt
                     , process
                     , text
                     , system-filepath